Bug 332307 - Recipients name is turned into lowercase
Summary: Recipients name is turned into lowercase
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.12.3
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-19 08:39 UTC by Tobias
Modified: 2014-03-23 12:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias 2014-03-19 08:39:03 UTC
When using the function "New message to ..." form the contex menu the name of the recipient is turned completly into lowercase characters.

Reproducible: Always

Steps to Reproduce:
1. Open a mail.
2. Right click on the recipient field (which looks like this: Max Mustermann <max-mustermann@example.org>)and select "New message to ..."
Actual Results:  
The name of the recipients should look like this: Max Mustermann <max-mustermann@example.org>

Expected Results:  
Actually KMail turns the recipients name into: max mustermann <max-mustermann@example.org>

This bug could be related to 318432. At least 318432 makes it very difficult to fix the lowercase characters manually.
Comment 1 Laurent Montel 2014-03-23 12:38:47 UTC
Git commit 30425384d3ecdd8834d9ea91d1a7b4ccf6f11199 by Montel Laurent.
Committed on 23/03/2014 at 12:38.
Pushed by mlaurent into branch 'KDE/4.12'.

Fix Bug 332307 - Recipients name is turned into lowercase

FIXED-IN: 4.12.4

M  +2    -2    kmail/kmcommands.cpp

http://commits.kde.org/kdepim/30425384d3ecdd8834d9ea91d1a7b4ccf6f11199