Fix Bug 332307 - Recipients name is turned into lowercase

FIXED-IN: 4.12.4
BUG: 332307