kmcommands.cpp
@@ -397,7 +397,7 @@ KMCommand::Result KMMailtoComposeCommand::execute()
 
     MessageHelper::initHeader( msg, KMKernel::self()->identityManager(),id );
     msg->contentType()->setCharset("utf-8");
-    msg->to()->fromUnicodeString( KPIMUtils::decodeMailtoUrl( mUrl ).toLower(), "utf-8" );
+    msg->to()->fromUnicodeString( KPIMUtils::decodeMailtoUrl( mUrl ), "utf-8" );
 
     KMail::Composer * win = KMail::makeComposer( msg, false, false,KMail::Composer::New, id );
     win->setFocusToSubject();
@@ -428,7 +428,7 @@ KMCommand::Result KMMailtoReplyCommand::execute()
     factory.setReplyStrategy( MessageComposer::ReplyNone );
     factory.setSelection( mSelection );
     KMime::Message::Ptr rmsg = factory.createReply().msg;
-    rmsg->to()->fromUnicodeString( KPIMUtils::decodeMailtoUrl( mUrl ).toLower(), "utf-8" ); //TODO Check the UTF-8
+    rmsg->to()->fromUnicodeString( KPIMUtils::decodeMailtoUrl( mUrl ), "utf-8" ); //TODO Check the UTF-8
     bool lastEncrypt = false;
     bool lastSign = false;
     KMail::Util::lastEncryptAndSignState(lastEncrypt, lastSign, msg);
